--- a/src/styles.scss
+++ b/src/styles.scss
@@ -5,16 +5,18 @@ body {
   margin: 0;
   font-family: Roboto, "Helvetica Neue", sans-serif;
   background-color: var(--mat-primary-50);
+  overflow-x: hidden;
 }
 
 html {
   height: 100%;
+  width: -webkit-fill-available;
 }
 
 body {
   margin: 0;
   font-family: Roboto, "Helvetica Neue", sans-serif;
-  width: 100vw;
+  width: -webkit-fill-available;
 }
 
 .full-width {
